--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to hahaha12333 <%= title %></p>
+    <p>Welcome to 12333 <%= title %>测试一个nodejs应用</p>
   </body>
 </html>
